--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -1,24 +1,333 @@
 @use "../settings/variables" as *;
 
-.header {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  padding: 2rem 0;
-  z-index: 10;
-
-  &__content {
-    width: min(90%, $container-width);
-    margin: 0 auto;
-
+header {
+    align-items: center;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-  }
+    padding: 5px 15px;
+    width: 100%;
+    z-index: 10;
+    position: fixed; // Sert à coller le nav dans le haut de l'écran
+    top: 0;
+    left: 0;
+    transition: all 0.4s;
 
-  .logo {
-    font-size: 1.6rem;
-    font-weight: 700;
-    letter-spacing: 0.1em;
-  }
+    &::before {
+        background-color: $accent;
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+        background-color: transparent;
+    }
+
+    .header-is-hidden.is-scrolling-down & {
+        transform: translateY(-100%) translateY(4px);
+    }
+
+    @media screen and (min-width: $breakpoint-md) {
+        background-color: rgba(1, 1, 1, 0);
+    }
+}
+
+.header__brand {
+    width: 100px;
+    position: relative;
+    z-index: 10;
+
+    transition: all 0.4s;
+
+    .nav-is-active & {
+        display: none;
+    }
+
+    &:hover{
+        transform: rotate(360deg);
+    }
+}
+
+.header__toggle {
+    --bar-width: 40px;
+    --bar-height: 7px;
+    --bar-spacer: 3px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+
+    padding: 0;
+    position: relative;
+    width: 50px;
+    height: 50px;
+    z-index: 10;
+
+    .points {
+        span {
+            background: #fff;
+            border-radius: 3px;
+            height: 7px;
+            width: 7px;
+            position: absolute;
+            top: calc(50% - var(--bar-height) / 2);
+            right: 95%;
+
+            transition: 0.3s all;
+
+            &:nth-child(1) {
+                top: calc(
+                    45% - var(--bar-height) / 2 - var(--bar-height) -
+                        var(--bar-spacer)
+                );
+            }
+            &:nth-child(3) {
+                top: calc(
+                    56% - var(--bar-height) / 2 + var(--bar-height) +
+                        var(--bar-spacer)
+                );
+            }
+        }
+    }
+
+    .barres {
+        span {
+            background: #fff;
+            border-radius: 3px;
+            height: var(--bar-height);
+            width: var(--bar-width);
+            position: absolute;
+            top: calc(50% - var(--bar-height) / 2);
+            left: calc(50% - var(--bar-width) / 2);
+
+            transition: 0.3s all;
+
+            &:nth-child(1) {
+                top: calc(
+                    45% - var(--bar-height) / 2 - var(--bar-height) -
+                        var(--bar-spacer)
+                );
+            }
+            &:nth-child(3) {
+                top: calc(
+                    56% - var(--bar-height) / 2 + var(--bar-height) +
+                        var(--bar-spacer)
+                );
+            }
+        }
+    }
+
+    .nav-is-active & {
+        margin: 10px 0 0 auto;
+        .points {
+            opacity: 0;
+        }
+        .barres {
+            span {
+                top: calc(50% - var(--bar-height) / 2);
+                &:nth-child(1) {
+                    transform: rotate(45deg);
+                }
+                &:nth-child(2) {
+                    transform: scaleX(0);
+                }
+                &:nth-child(3) {
+                    transform: rotate(-45deg);
+                }
+            }
+        }
+    }
+
+    @media screen and (min-width: $breakpoint-md) {
+        display: none;
+    }
+}
+
+.nav-primary {
+    background-color: $accent;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    overflow-y: auto;
+    z-index: 1;
+    transition: all 0.4s;
+    transform: translateY(-100%);
+
+    .nav-is-active & {
+        transform: translateY(0);
+    }
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        list-style: none;
+        padding: 20px 0 0 0;
+        width: 100%;
+        margin: auto;
+        transition: all 0.4s ease-out;
+        transform: translateY(-70%);
+        opacity: 0;
+
+        .nav-is-active & {
+            transform: translateY(0);
+            opacity: 1;
+        }
+
+        li{
+            margin:  020px;
+        }
+
+        li:nth-child(5) {
+            a {
+                width: fit-content;
+                padding: 20px;
+                margin: 0 auto;
+                border-radius: 10px;
+                color: var(--color-font-primary);
+                background-color: #fff;
+            }
+        }
+
+        @media screen and (min-width: $breakpoint-md) {
+            justify-content: flex-end;
+            flex-direction: row;
+            width: 100%;
+            opacity: 1;
+            transform: none;
+            padding: 0;
+            font-size: var(--font-size-menu-small);
+        }
+    }
+
+    @media screen and (min-width: $breakpoint-md) {
+        display: block;
+        background: transparent;
+        transform: none;
+        position: relative;
+        height: auto;
+
+        z-index: 2;
+        border: none;
+    }
+}
+
+.nav-primary__item {
+    font-size: var(--font-size-menu-large);
+    color: var(--color-font-primary);
+    font-weight: 600;
+    padding: 40px 0;
+    position: relative;
+    display: block;
+    text-align: center;
+
+
+    @media screen and (min-width: $breakpoint-md) {
+        font-size: var(--font-size-menu-small);
+        font-weight: normal;
+        padding: 10px 30px;
+
+        transition: 0.4s all;
+
+        &:hover{
+            color: var(--color-font-secondary);
+        }
+        
+    }
+}
+
+.nav-is-active {
+    body {
+        overflow: hidden; // Empeche de scroll quand le nav est actif
+    }
+}
+
+.liens-wrapper{
+    position: relative;
+}
+
+.animation-hover {
+    &:before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 3px;
+        height: 100%;
+        background-color: $accent;
+        transform: scaleY(0);
+        transform-origin: bottom left;
+
+        transition: transform 0.3s;
+    }
+
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 3px;
+        height: 100%;
+        background-color: $accent;
+        transform: scaleY(0);
+        transform-origin: top right;
+
+        transition: transform 0.3s;
+    }
+
+
+    .inner-wrapper {
+        position: relative;
+        display: inline-block;
+    }
+
+    .animation-a {
+        
+        &:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 3px;
+            background-color: $accent;
+            transform: scaleX(0);
+            transform-origin: top left;
+
+            transition: transform 0.4s;
+        }
+
+        &:after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 100%;
+            height: 3px;
+            background-color: $accent;
+            transform: scaleX(0);
+            transform-origin: bottom right;
+
+            transition: transform 0.3s;
+        }
+    }
+
+    &:hover {
+        &:before, 
+        &:after {
+            transform: scaleY(1);
+        }
+
+        .animation-a {
+            &:before,
+            &:after {
+                transform: scaleX(1);
+            }
+        }
+    }
 }
