--- a/styles/components/nav.scss
+++ b/styles/components/nav.scss
@@ -1,97 +1,93 @@
-@use "../settings/variables" as *;
+// @use "../settings/variables" as *;
 
-.nav {
-  display: flex;
-  gap: 2.5rem;
+// .nav {
+//   display: flex;
+//   gap: 2.5rem;
 
-  &__link {
-    position: relative;
-    text-decoration: none;
-    font-weight: 500;
-    color: $text-main;
-    padding: 0.3rem 0.2rem;
+//   &__link {
+//     position: relative;
+//     text-decoration: none;
+//     font-weight: 500;
+//     color: $text-main;
+//     padding: 0.3rem 0.2rem;
 
-    span {
-      position: relative; 
-      display: inline-block;
-    }
+//     @media screen and (min-width: 750px) {
 
-    @media screen and (min-width: 750px) {
+//       // gauche
+//       &::before {
+//         content: "";
+//         position: absolute;
+//         bottom: 0;
+//         left: 0;
+//         width: 3px;
+//         height: 100%;
+//         background-color: $accent;
+//         transform: scaleY(0);
+//         transform-origin: bottom;
+//         transition: transform 0.3s ease;
+//       }
 
-      // gauche
-      &::before {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 3px;
-        height: 100%;
-        background-color: $accent;
-        transform: scaleY(0);
-        transform-origin: bottom;
-        transition: transform 0.3s ease;
-      }
+//       // haut
+//       &::after {
+//         content: "";
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         width: 100%;
+//         height: 3px;
+//         background-color: $accent;
+//         transform: scaleX(0);
+//         transform-origin: left;
+//         transition: transform 0.3s ease;
+//       }
 
-      // haut
-      &::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 3px;
-        background-color: $accent;
-        transform: scaleX(0);
-        transform-origin: left;
-        transition: transform 0.3s ease;
-      }
+//       span {
+//         position: relative; 
+//         display: inline-block;
+//         // DROITE
+//         &::before {
+//           content: "";
+//           position: absolute;
+//           inset: 0 0 0 auto;
+//           width: 3px;
+//           background-color: $accent;
+//           transform: scaleY(0);
+//           transform-origin: top;
+//           transition: transform 0.3s ease;
+//         }
 
-      // droite
-      span::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 3px;
-        height: 100%;
-        background-color: $accent;
-        transform: scaleY(0);
-        transform-origin: top;
-        transition: transform 0.3s ease;
-      }
+//         // BAS
+//         &::after {
+//           content: "";
+//           position: absolute;
+//           inset: auto 0 0 0;
+//           height: 3px;
+//           background-color: $accent;
+//           transform: scaleX(0);
+//           transform-origin: right;
+//           transition: transform 0.3s ease;
+//         }
 
-      // bas
-      span::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 3px;
-        background-color: $accent;
-        transform: scaleX(0);
-        transform-origin: right;
-        transition: transform 0.3s ease;
-      }
+//       }
 
-      // HOVER ONLY
-      &:hover {
-        &::before {
-          transform: scaleY(1);
-        }
+//       // HOVER ONLY
+//       &:hover {
+//         &::before {
+//           transform: scaleY(1);
+//         }
 
-        &::after {
-          transform: scaleX(1);
-        }
+//         &::after {
+//           transform: scaleX(1);
+//         }
 
-        span::before {
-          transform: scaleY(1);
-        }
+//         span::before {
+//           transform: scaleY(1);
+//         }
 
-        span::after {
-          transform: scaleX(1);
-        }
-      }
-    }
-  }
-}
+//         span::after {
+//           transform: scaleX(1);
+//         }
+//       }
+//     }
+//   }
+// }
