--- a/styles/settings/variables.scss
+++ b/styles/settings/variables.scss
@@ -3,4 +3,17 @@ $accent: #f07a4a;
 $text-main: #ffffff;
 $text-muted: #d1d5d8;
 
+
 $container-width: 1200px;
+
+
+/* ==========================================================================
+   DIMENSIONS / SETTINGS
+   ========================================================================== */
+
+// Valeurs utilisées pour les médias query
+$breakpoint-xs: 375px;
+$breakpoint-sm: 768px;
+$breakpoint-md: 1024px;
+$breakpoint-lg: 1440px;
+$breakpoint-xl: 1920px;
