--- a/styles/settings/variables.scss
+++ b/styles/settings/variables.scss
@@ -1,10 +1,11 @@
+$bg-darker: #1B242D;
 $bg-dark: #3b4249;
 $accent: #f07a4a;
 $text-main: #ffffff;
 $text-muted: #d1d5d8;
 
 
-$container-width: 1200px;
+$container-width: 1500px;
 
 
 /* ==========================================================================
