Adding project template pages Starting scrolly animations

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,7 @@
 @use "settings/variables";
 @use "settings/reset";
+@use "settings/scrolly.scss";
+@use "settings/easing.scss";
 
 @use "sections/projects";
 @use "sections/about";
