--- a/styles/sections/projectTemplate2.scss
+++ b/styles/sections/projectTemplate2.scss
@@ -7,7 +7,7 @@
 
 /* HERO */
 .storyHero {
-  padding: 8rem 2rem 6rem;
+  padding: 8rem 2rem 2rem 2rem;
   text-align: center;
 }
 
@@ -38,7 +38,7 @@
   display: flex;
   align-items: center;
   gap: 4rem;
-  padding: 6rem 2rem;
+  padding: 4rem 2rem;
 }
 
 .storyChapter.reverse {
