--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,6 +2,7 @@
 @use "settings/reset";
 @use "settings/scrolly.scss";
 @use "settings/easing.scss";
+@use "settings/pageTransition.scss";
 
 @use "sections/projects";
 @use "sections/about";
