Adding parallax effect on about picture

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,6 +3,7 @@
 @use "settings/scrolly.scss";
 @use "settings/easing.scss";
 @use "settings/pageTransition.scss";
+@use "settings/parallax.scss";
 
 @use "sections/projects";
 @use "sections/about";
