--- a/styles/settings/variables.scss
+++ b/styles/settings/variables.scss
@@ -1,18 +1,17 @@
+//Colors
 $bg-darker: #1B242D;
 $bg-dark: #3b4249;
 $accent: #f07a4a;
 $text-main: #ffffff;
 $text-muted: #d1d5d8;
 
-
+//Sizes
 $container-width: 1500px;
 
+//Fonts
+$font-main: "Work Sans", sans-serif;
 
-/* ==========================================================================
-   DIMENSIONS / SETTINGS
-   ========================================================================== */
-
-// Valeurs utilisées pour les médias query
+//Dimensions
 $breakpoint-xs: 375px;
 $breakpoint-sm: 768px;
 $breakpoint-md: 1024px;
