Translation working perfectly on index.html

--- a/styles/settings/variables.scss
+++ b/styles/settings/variables.scss
@@ -2,6 +2,7 @@
 $bg-darker: #1B242D;
 $bg-dark: #3b4249;
 $accent: #f07a4a;
+$accent-darken: #cf4610;
 $text-main: #ffffff;
 $text-muted: #d1d5d8;
 
