Adding smooth translation animation and setup href change depending on language

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,6 +4,7 @@
 @use "settings/easing.scss";
 @use "settings/pageTransition.scss";
 @use "settings/parallax.scss";
+@use "settings/i18n.scss";
 
 @use "sections/projects";
 @use "sections/about";
