--- a/styles/components/hero.scss
+++ b/styles/components/hero.scss
@@ -7,22 +7,31 @@
   text-align: center;
 
   &__content {
-    max-width: 900px;
+    max-width: 80%;
     padding: 0 1rem;
   }
 
   &__title {
-    font-size: clamp(3.5rem, 7vw, 5.5rem);
+    font-size: 100px;
     font-weight: 600;
     line-height: 1;
   }
 
   &__subtitle {
     margin-top: 1.2rem;
-    font-size: 1.6rem;
+    font-size: 30px;
     font-weight: 600;
     color: $accent;
   }
+
+  &__tagline {
+    margin-top: 0.8rem;
+    font-size: 20px;
+    font-weight: 400;
+    color: #fff;
+    margin-inline: auto;
+  }
+
 
   &__socials {
     margin: 2.5rem 0 1.5rem;
