Adding particle and reworking projects templates

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -25,3 +25,4 @@
 @use "elements/buttons";
 @use "elements/scrollBar.scss";
 @use "elements/languageSwitcher.scss";
+@use "elements/particles.scss";
