--- a/styles/components/projectCard.scss
+++ b/styles/components/projectCard.scss
@@ -7,6 +7,16 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  min-height: 450px;
+  background-color: $bg-dark;
+  border-radius: 24px;
+  padding: 2rem;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+
+  
+  transition: transform 0.4s cubic-bezier(0.22, 1, 0.36, 1),
+  box-shadow 0.4s ease;
+  
 
   .projectTitle {
     font-size: 1.8rem;
@@ -27,13 +37,7 @@
     flex-grow: 1;
   }
 
-  background-color: $bg-dark;
-  border-radius: 24px;
-  padding: 2rem;
-  transition: transform 0.4s cubic-bezier(0.22, 1, 0.36, 1),
-  box-shadow 0.4s ease;
-
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+  
 
   &:hover {
     transform: translateY(-8px);
