--- a/styles/sections/projectTemplate1.scss
+++ b/styles/sections/projectTemplate1.scss
@@ -1,149 +1,69 @@
 @use "../settings/variables" as *;
 
-.projectPage {
-  max-width: $container-width;
-  margin: 0 auto;
-  padding: 2rem;
-  color: $text-main;
-}
 
-/* HERO */
-.projectHero {
-  display: flex;
-  gap: 3rem;
-  align-items: center;
-  justify-content: center;
-  margin: 4rem 0 6rem 0;
+.projectStoryVideo {
 
-  .heroContent {
-    width: 45%;
+  .storyHero {
+    text-align: center;
+    margin: 0 0 20px 0;
   }
 
-  .heroMedia {
-    width: 45%;
-    text-align: center;
+  .storyTitle {
+    font-size: 64px;
+  }
 
-    video,
-    img {
-      width: 55%;
+  .storySubtitle {
+    font-size: 22px;
+    margin: 2rem auto 4rem;
+  }
+
+  .videoWrapper {
+    margin: auto;
+
+    video {
       border-radius: 24px;
     }
   }
-}
 
-.projectTitle {
-  font-size: 64px;
-  margin-bottom: 1rem;
-}
+  .storyChapter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+    width: $container-width;
+    height: 80vh;
+    padding: 0 0 50px 0;
 
-.projectTagline {
-  font-size: 20px;
-  color: $text-muted;
-  margin-bottom: 2rem;
-}
-
-.projectMeta {
-  list-style: none;
-  padding: 0;
-
-  li {
-    margin-bottom: 0.5rem;
-    font-size: 18px;
-  }
-}
-
-/* SECTIONS */
-.projectSection {
-  margin-bottom: 6rem;
-
-  h2 {
-    font-size: 36px;
-    margin-bottom: 1.5rem;
-    color: $text-main;
-  }
-
-  p {
-    font-size: 20px;
-    line-height: 1.4;
-    color: $text-muted;
-  }
-}
-
-/* SPLIT */
-.projectSplit {
-  display: flex;
-  gap: 3rem;
-  align-items: center;
-  justify-content: space-between;
-
-  .text,
-  .media {
-    width: 40%;
-  }
-
-  img {
-    width: 100%;
-    border-radius: 20px;
-  }
-
-  &.reverse {
-    flex-direction: row-reverse;
-  }
-}
-
-/* CHALLENGES */
-.challenge {
-  margin-bottom: 2rem;
-
-  h3 {
-    font-size: 24px;
-    color: $accent;
-  }
-
-  .solution {
-    margin-top: 0.5rem;
-  }
-}
-
-/* LEARNINGS */
-.learnings {
-  font-size: 20px;
-  padding-left: 1.5rem;
-
-  li {
-    margin-bottom: 0.75rem;
-  }
-}
-
-/* CREDITS */
-.projectCredits {
-  text-align: center;
-  font-size: 18px;
-  color: $text-muted;
-}
-
-/* RESPONSIVE */
-@media (max-width: $breakpoint-sm) {
-
-  .projectHero {
-    flex-direction: column;
-
-    // .heroContent,
-    // .heroMedia {
-    //   width: 100%;
-    // }
-  }
-
-  .projectSplit {
-    flex-direction: column;
-
-    .text,
-    .media {
-      width: 100%;
+    &.reverse {
+      flex-direction: row-reverse;
     }
   }
 
-  .projectTitle {
-    font-size: 42px;
+  .chapterText {
+    width: 45%;
+    text-align: center;
+
+    h2 {
+      font-size: 40px;
+      color: $accent;
+    }
+
+    p {
+      font-size: 20px;
+      color: $text-muted;
+    }
+  }
+
+  .chapterMedia {
+    height: 100%;
+    img, video {
+      height: 100%;
+      border-radius: 24px;
+    }
+  }
+
+  .storyCredits {
+    padding: 6rem 2rem;
+    text-align: center;
   }
 }
