Adjusting templateProject2 scss and adding playable video.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,3 +26,4 @@
 @use "elements/scrollBar.scss";
 @use "elements/languageSwitcher.scss";
 @use "elements/particles.scss";
+@use "elements/playableVideo.scss";
