--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -12,6 +12,10 @@ header {
     left: 0;
     transition: all 0.4s;
 
+    .logo{
+        width: 100%;
+    }
+
     &::before {
         background-color: $accent;
         content: '';
