--- a/styles/components/hero.scss
+++ b/styles/components/hero.scss
@@ -1,14 +1,20 @@
 @use "../settings/variables" as *;
 
+
 .hero {
   min-height: 100vh;
-  display: grid;
-  place-items: center;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 
   &__content {
     max-width: 80%;
     padding: 0 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
 
   &__title {
