--- a/styles/sections/projectTemplate2.scss
+++ b/styles/sections/projectTemplate2.scss
@@ -17,7 +17,7 @@
   gap: 4rem;
   max-width: $container-width;
   margin: auto;
-  padding: 10px;
+  padding: 30px 0;
 }
 
 .heroLeft {
@@ -56,7 +56,10 @@
 .techFeatures {
   width: $container-width;
   margin: auto;
-  padding: 6rem 0;
+
+  .sectionTitle{
+    padding: 20px 0;
+  }
 }
 
 .featuresGrid {
@@ -66,21 +69,55 @@
 }
 
 .featureCard {
-  padding: 2rem;
-  border-radius: 20px;
-  background: rgba(255, 255, 255, 0.04);
+  background: rgba(255, 255, 255, 0.03);
+  border-radius: 24px;
+  padding: 2.5rem;
+
+  backdrop-filter: blur(8px);
+  border: 1px solid rgba(255, 255, 255, 0.05);
+
+  text-align: center;
+
+  transition: all 0.3s ease;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &:hover {
+    transform: translateY(-8px) scale(1.02);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+  }
 }
 
 .featureImage {
   width: 100%;
+  max-height: 50%;
   border-radius: 16px;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
+  object-fit: cover;
+
+  // petit effet subtil comme les icônes
+  transition: transform 0.3s ease;
 }
 
 .featureTitle {
+  font-size: 24px;
   color: $accent;
   margin-bottom: 1rem;
 }
+
+.featureCard p {
+  font-size: 18px;
+  color: $text-muted;
+  line-height: 1.5;
+  margin-bottom: 0.8rem;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
 
 /* BREAKDOWN
 -------------------------------------------------- */
@@ -90,6 +127,7 @@
   gap: 4rem;
   margin: auto;
   padding: 4rem 0;
+  max-width: $container-width;
 
   &.reverse {
     flex-direction: row-reverse;
@@ -102,6 +140,11 @@
     align-items: center;
     justify-content: center;
   }
+
+  p
+  {
+    font-size: 25px;
+  }
 }
 
 .breakdownMedia img {
@@ -110,24 +153,9 @@
 }
 
 .breakdownTitle {
+  font-size: 40px;
   color: $accent;
   padding: 0 0 20px 0;
-}
-
-/* STACK
--------------------------------------------------- */
-.techStack {
-  width: $container-width;
-  margin: auto;
-  padding: 6rem 0;
-}
-
-.stackList {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
-  list-style: none;
-  padding: 0;
 }
 
 /* CREDITS
