--- a/styles/sections/about.scss
+++ b/styles/sections/about.scss
@@ -17,10 +17,12 @@
 .aboutImage {
   display: flex;
   justify-content: center;
-  width: 40%;
-
+  width: 40%; 
   img {
+    width: 100%;   
+    height: auto;  
     border-radius: 24px;
+    object-fit: cover; 
   }
 }
 
