Removing useless comments

--- a/styles/elements/scrollBar.scss
+++ b/styles/elements/scrollBar.scss
@@ -28,7 +28,7 @@ html, body {
 
 .scroll-wrapper {
   height: 100vh;
-  overflow-y: scroll;  /* ⚡ scroll actif */
+  overflow-y: scroll;  /* scroll actif */
 }
 
 /* cache la scrollbar du navigateur */
