--- a/styles/sections/projectTemplate1.scss
+++ b/styles/sections/projectTemplate1.scss
@@ -65,7 +65,7 @@
       video {
         width: 100%;
         height: 100%;
-        object-fit: cover; // ← magie
+        object-fit: cover;
         border-radius: 24px;
       }
     }
