--- a/styles/sections/projectTemplate2.scss
+++ b/styles/sections/projectTemplate2.scss
@@ -9,8 +9,7 @@
   }
 }
 
-/* HERO
--------------------------------------------------- */
+/* HERO -------------------------------------------------- */
 .techHero {
   display: flex;
   align-items: center;
@@ -57,8 +56,7 @@
   border-radius: 24px;
 }
 
-/* FEATURES
--------------------------------------------------- */
+/* FEATURES -------------------------------------------------- */
 .techFeatures {
   width: $container-width;
   margin: auto;
@@ -102,8 +100,6 @@
   border-radius: 16px;
   margin-bottom: 1.5rem;
   object-fit: cover;
-
-  // petit effet subtil comme les icônes
   transition: transform 0.3s ease;
 }
 
@@ -125,8 +121,7 @@
 }
 
 
-/* BREAKDOWN
--------------------------------------------------- */
+/* BREAKDOWN -------------------------------------------------- */
 .techBreakdownArticle {
   display: flex;
   justify-content: center;
@@ -163,8 +158,7 @@
   padding: 0 0 20px 0;
 }
 
-/* CREDITS
--------------------------------------------------- */
+/* CREDITS -------------------------------------------------- */
 .techCredits {
   width: $container-width;
   margin: auto;
